--- a/src/App.css
+++ b/src/App.css
@@ -254,6 +254,32 @@
   background-color: #c0392b;
 }
 
+@media (max-width: 768px) {
+  .kth {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .answer-btn {
+    width: 250px;
+    height: 250px;
+    font-size: 17px;
+  }
+}
+
+@media (max-width: 480px) {
+  .kth {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .answer-btn {
+    width: 100%;
+    height: 180px;
+    font-size: 16px;
+  }
+  .quiz-button {
+    padding: 10px 15px;
+    font-size: 14px;
+  }
+}
+
 /* fewfwer */
 
 .result-container {
