--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@
 /* Quiz Container */
 .quiz-container {
   width: 100%;
-  margin: 50px auto;
+  margin: 0 auto;
   border-radius: 15px;
   color: #fff;
 }
