--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,7 @@
 .kth-text h2 {
   font-size: 22px;
   font-weight: bold;
+  margin: 10px;
 }
 /* Định dạng câu trả lời dạng lưới */
 .kth {
@@ -160,6 +161,7 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding: 10px;
+  margin: 10px;
 }
 
 /* Các ô đáp án */
